# soldrive-backend

./: .gitignore  README.md  package.json
.devcontainer/: Dockerfile  devcontainer.json
bonk-suscription/: Anchor.toml  package.json
bonk-suscription/programs/bonk-suscription/: Cargo.toml
bonk-suscription/programs/bonk-suscription/src/: lib.rs
bonk-suscription/tests/: bonk-suscription.ts  sendToken.js  subscribe.js
discriminator_generator/: Cargo.toml
discriminator_generator/src/: main.rs
files/: Anchor.toml
files/programs/files/: Cargo.toml
files/programs/files/src/: lib.rs
files/tests/: files.ts
phantom-wallet-integration/: package.json
phantom-wallet-integration/src/: App.js
phantom-wallet-integration/src/components/: PhantomIntegration.js
sol-drive/: Anchor.toml
sol-drive/programs/sol-drive/: Cargo.toml
sol-drive/programs/sol-drive/src/: lib.rs
sol-drive/tests/: sol-drive.ts
soldrive/: Anchor.toml  Cargo.toml  deploy.json  new_program_id.json  package.json  program_id.json
soldrive/programs/soldrive/: Cargo.toml
soldrive/programs/soldrive/src/: lib.rs
soldrive/scripts/: checkAccessFiles.js  checkAccessFiles2.js  checkUsers.js  check_access_files_bulk.js  createFile.js  createFile2.js  createFileFinal.js  createSendERC20.js  createToken2.js  createUser.js  createUserBytes.js  encryptDecrypt.js  encryptDecryptToPublicAddress.js  giveAccess.js  testIdea.js
soldrive/tests/: soldrive.ts
users/: Anchor.toml
users/programs/users/: Cargo.toml
users/programs/users/src/: lib.rs
users/tests/: users.ts
